# gg-log

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
app/adapters/: cryptography_jwt.py
app/config/: __init__.py  db_config.py
app/migrations/models/: 0_20250921125547_init.py
app/models/: base.py  user.py
app/ports/: cryptography.py
app/repositories/: base.py  user.py
app/schemas/: user.py
app/tests/: conftest.py
app/tests/unit/: test_base_use_case.py  test_cryptography_jwt.py  test_cryptography_port.py  test_user_create_use_case.py  test_user_repository.py
app/use_cases/: base.py
app/use_cases/user/: user_create.py
